--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,35 +10,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1 — Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2 — Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-
-      # Step 3 — Build and push FRONTEND
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./frontend/Dockerfile
+          file: ./frontend/Dockerfile   # <-- update this if needed
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/monitoring-frontend:latest
 
           
-      # Step 4 — Build and push BACKEND
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./backend/Dockerfile
+          file: ./backend/Dockerfile    # <-- update this if needed
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/monitoring-backend:latest
+
 
 
