--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,20 +19,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+          
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./frontend/Dockerfile   # <-- update this if needed
+          context: FRONTEND
+          file: ./FRONTEND/Dockerfile   # <-- update this if needed
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/monitoring-frontend:latest
 
-          
+
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./backend/Dockerfile    # <-- update this if needed
+          context: BACKEND
+          file: ./BACKEND/Dockerfile    # <-- update this if needed
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/monitoring-backend:latest
 
