--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,12 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
           
+          
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
-          context: FRONTEND
-          file: ./FRONTEND/Dockerfile   # <-- update this if needed
+          context: .
+          file: ./frontend/Dockerfile   # <-- update this if needed
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/monitoring-frontend:latest
 
@@ -32,8 +33,8 @@ jobs:
       - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
-          context: BACKEND
-          file: ./BACKEND/Dockerfile    # <-- update this if needed
+          context: .
+          file: ./backend/Dockerfile    # <-- update this if needed
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/monitoring-backend:latest
 
