--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-          
+
           
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./frontend/Dockerfile   # <-- update this if needed
+          context: ./frontend
+          file: Dockerfile     # <-- update this if needed
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/monitoring-frontend:latest
 
