--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-GOOGLE_CLIENT_ID = "257315684530-9fnh07ahusfd9o0tdimgs7aufk3fgbph.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET = "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"
+GOOGLE_CLIENT_ID = "257315684530-1n51dejnqlk97s9g260bk9dt2c0pad6f.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
+GOOGLE_REDIRECT_URI= "http://localhost:8000/auth/callback"
+GOOGLE_DISCOVERY_URL = "https://accounts.google.com/.well-known/openid-configuration"
