--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,26 @@
 services:
-
   backend:
-    build: ../backend
-    container_name: backend_api
+    build: ./backend
+    container_name: backend
     ports:
-      - "5001:5000"
+      - "5000:5000"
     volumes:
-      - backend_data:/data
-    networks:
-      - monitoring_net
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       FLASK_ENV: development
 
   frontend:
-    build: ../frontend
+    build: ./frontend
     container_name: frontend_app
     ports:
       - "8000:8000"
     depends_on:
       - backend
-    networks:
-      - monitoring_net
     environment:
-      API_URL: "http://backend:5001/api/metrics"
+      API_URL: "http://backend:5000/api/metrics"
       GOOGLE_CLIENT_ID: "${GOOGLE_CLIENT_ID}"
       GOOGLE_CLIENT_SECRET: "${GOOGLE_CLIENT_SECRET}"
       FLASK_ENV: development
-
-networks:
-  monitoring_net:
-    driver: bridge
 
 volumes:
   backend_data:
