--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,8 +13,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy all project files
 COPY . .
 
+RUN pip install -r requirements.txt
+RUN pip install docker psutil
+
 # Expose your API port (change if your API uses a different port)
-EXPOSE 5001
+EXPOSE 5000
 
 # Command to start the API
 CMD ["python", "app.py"]
